<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity">

    <TextView
        android:text="@string/ley_lines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/editTextHost"
        android:layout_above="@+id/editTextPort"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:inputType="textUri"
        android:hint="@string/input_host"/>
    <EditText
        android:id="@+id/editTextPort"
        android:layout_above="@+id/editTextMessage"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:inputType="number"
        android:hint="@string/input_port"/>
    <EditText
        android:id="@+id/editTextMessage"
        android:layout_above="@+id/refreshButton"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:inputType="textAutoComplete"
        android:hint="@string/input_message"/>
    <Button
        android:id="@+id/refreshButton"
        android:background="@drawable/btn_default"
        android:layout_above="@+id/trackerButton"
        android:layout_alignLeft="@id/trackerButton"
        android:layout_alignStart="@id/trackerButton"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/btn_refresh" />
    <TextView
        android:id="@+id/statusText"
        android:layout_above="@+id/trackerText"
        android:layout_alignRight="@+id/trackerText"
        android:layout_alignEnd="@+id/trackerText"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:textSize="30sp" />
    <Button
        android:id="@+id/trackerButton"
        android:background="@drawable/btn_default"
        android:layout_above="@+id/displayButton"
        android:layout_alignLeft="@id/displayButton"
        android:layout_alignStart="@id/displayButton"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/btn_tracker" />
    <TextView
        android:id="@+id/trackerText"
        android:layout_above="@+id/displayText"
        android:layout_alignRight="@+id/displayText"
        android:layout_alignEnd="@+id/displayText"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:textSize="30sp"/>
    <Button
        android:id="@+id/displayButton"
        android:background="@drawable/btn_default"
        android:layout_above="@+id/pathButton"
        android:layout_alignLeft="@id/pathButton"
        android:layout_alignStart="@id/pathButton"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/btn_display" />
    <TextView
        android:id="@+id/displayText"
        android:layout_above="@+id/pathText"
        android:layout_alignRight="@+id/pathText"
        android:layout_alignEnd="@+id/pathText"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:textSize="30sp"/>
    <Button
        android:id="@+id/pathButton"
        android:background="@drawable/btn_default"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/btn_path" />
    <TextView
        android:id="@+id/pathText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:textSize="30sp"/>
    <!--<Button
        android:id="@+id/sendButton"
        android:background="@drawable/btn_default"
        android:layout_marginTop="320dp"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/btn_send" />-->



</RelativeLayout>
